# hers-diagnostic-schema

./: .gitignore  404.html  LICENSE.txt  README.md  dodo.py  index.html  index.xml  pyproject.toml  sitemap.xml
.github/workflows/: build-and-test.yaml  build-web.yaml
assets/examples/: baltimore-multiclimate-base-case.cbor  baltimore-multiclimate-base-case.yaml
assets/schema/: HERSDiagnosticOutput.schema.json
categories/: index.html  index.xml
docs/: HERSDiagnosticOutput.md.j2
docs/web/: about.md  config.yaml  landing.md
examples/: baltimore-multiclimate-base-case.json  index.html  index.xml
examples/assets/: baltimore-multiclimate-base-case.cbor
examples/examples/: index.html
hers_diagnostic_output/: __init__.py  calculate_eri.py  data_cashe.py  hers_diagnostic_output.py  plot_dimes.py  store_data.py
js/: main.min.307789b2abf825ca7624bf22c25bec0758d9c79a3f30815dea8ddd5c8304550f.js
schema/: HERSDiagnosticOutput.schema.yaml  index.html  index.xml
schema/assets/: HERSDiagnosticOutput.schema.json
schema/schema/: index.html
scripts/: calculate_eri.py  comparison.py  data_cache.py
scss/: main.min.1c013848f8e4d5e4cda296e0f2b01177482ef4c97b2f45108a8bed25e50d469d.css  main.min.c911f38fe2a65019b2b74db649a697a8458d17af82cb7a2c3c2f88636e6f740c.css
search/: search_index.json
specifications/: index.html  index.xml
specifications/HERSDiagnosticOutput/: index.html
specifications/hersdiagnosticoutput/: index.html
tags/: index.html  index.xml
