[tool.poetry]
authors = ["Big Ladder Software"]
description = ""
name = "hers-diagnostic-output"
packages = [{include = "hers_diagnostic_output"}]
version = "0.3.0"

[tool.poetry.dependencies]
koozie = "*"
lattice = {git = "https://github.com/bigladder/lattice.git", branch = "main"}# {git = "https://github.com/bigladder/lattice.git", branch = "main"} #{path = "../lattice", develop = true} # "0.1.4"
pandas = "2.2.1"
python = "^3.9"

[tool.poetry.group.dev.dependencies]
doit = "0.36.0"
tomli = "2.0.1"

[tool.poetry.group.extras.dependencies]
pyinstrument = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
