[project]
authors = [{name = "Big Ladder Software"}]
dependencies = [
  "koozie",
  "lattice",
  "pandas==2.2.1",
]
description = ""
name = "hers-diagnostic-output"
requires-python = "~=3.10"
version = "0.3.0"

[dependency-groups]
dev = [
  "doit==0.36.0",
  "tomli==2.0.1",
]
extras = ["pyinstrument"]

[tool.uv]
default-groups = [
  "dev",
  "extras",
]

[tool.uv.sources]
lattice = {git = "https://github.com/bigladder/lattice.git", branch = "main"}

[tool.hatch.build.targets.sdist]
include = ["hers_diagnostic_output"]

[tool.hatch.build.targets.wheel]
include = ["hers_diagnostic_output"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
